Update Russian dpkg and dselect translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * German (Sven Joachim).
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo).
+  * Russian (Yuri Kozlov). Closes: #478827
   * Swedish (Peter Karlsson).
 
   [ Updated manpages translations ]
@@ -54,6 +55,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
+  * Russian (Yuri Kozlov). Closes: #478802
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Fri, 11 Apr 2008 22:46:48 +0100
 
