--- a/dselect/po/ru.po
+++ b/dselect/po/ru.po
@@ -3,13 +3,13 @@
 # Copyright (C) 1999 Michael Sobolev
 #
 # Michael Sobolev <mss@transas.com>, 1999.
-# Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007.
+# Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg_po_ru\n"
+"Project-Id-Version: dpkg 1.14.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2007-08-05 23:02+0400\n"
+"PO-Revision-Date: 2008-05-01 12:01+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -292,9 +292,8 @@ msgid "Revert to directly requested state for all packages"
 msgstr "Вернуть все пакеты к непосредственно затребованному состоянию"
 
 #: dselect/bindings.cc:161
-#, fuzzy
 msgid "Revert to currently installed state for all packages"
-msgstr "Вернуть все пакеты к непосредственно затребованному состоянию"
+msgstr "Вернуть все пакеты к установленному в данный момент состоянию"
 
 #: dselect/bindings.cc:164
 msgid "Select currently-highlighted access method"
@@ -554,7 +553,6 @@ msgid "Display, part 1: package listing and status chars"
 msgstr "Просмотр, часть 1: список пакетов и символы состояния"
 
 #: dselect/helpmsgs.cc:121
-#, fuzzy
 msgid ""
 "The top half of the screen shows a list of packages.  For each package you "
 "see\n"
@@ -589,26 +587,28 @@ msgstr ""
 "В верхней половине экрана показан список пакетов. В первых четырёх колонках\n"
 "даны текущее состояние и пометка каждого пакета. В кратком режиме (клавиша "
 "v\n"
-"переключает между кратким и подробным режимами) это четыре символа,\n"
+"переключает между кратким и подробным режимами) это одиночные символы,\n"
 "обозначающие (слева направо):\n"
 "\n"
 " Флаг ошибки: Пробел -- нет ошибки (но пакет может быть неработоспособен, см."
 "ниже)\n"
-"              R      -- серьёзная ошибка при установке, требует "
-"переустановки.\n"
+"              R      -- серьёзная ошибка при установке, требуется "
+"переустановка.\n"
 " Флаг установки:  Пробел -- не установлен\n"
 "                      *  -- установлен\n"
 "                      -  -- не установлен, но остались файлы конфигурации\n"
 "    пакеты в этих  {  U  -- распакован, но не настроен\n"
-"     состояниях    {  C  -- частично настроен (произошла ошибка)\n"
-"  неработоспособны {  I  -- частично установлен (произошла ошибка).\n"
+"     состояниях    {  C  -- наполовину настроен (произошла ошибка)\n"
+"  не установлены   {  I  -- наполовину установлен (произошла ошибка)\n"
+"     правильно     { W, t -- отмечен как ждущий рассмотрения\n"
+"\n"
 " Старая пометка: состояние, затребованное до входа в этот список\n"
 " Пометка: какое состояние затребовано для пакета:\n"
 "   * : помечен для установки или обновления\n"
 "   - : помечен для удаления, но файлы конфигурации должны остаться\n"
 "   = : зафиксирован: пакет не будет обрабатываться\n"
-"   _ : помечен для полной вычистки: удалить также файлы конфигурации\n"
-"   n : это новый пакет и ещё не помечен\n"
+"   _ : помечен для полной вычистки: удаляются также файлы конфигурации\n"
+"   n : это новый пакет и ещё не помечен для установки/удаления и тд\n"
 "\n"
 "Также показаны приоритет, раздел, имя каждого пакета, номера установленной\n"
 "и доступной версий (shift-V переключает режим отображения) и краткое\n"
@@ -1357,11 +1357,11 @@ msgstr "ошибка настройки"
 
 #: dselect/pkgdisplay.cc:57
 msgid "awaiting trigger processing"
-msgstr ""
+msgstr "ожидает начала обработки"
 
 #: dselect/pkgdisplay.cc:58
 msgid "triggered"
-msgstr ""
+msgstr "обработка начата"
 
 #: dselect/pkgdisplay.cc:59
 msgid "installed"
@@ -1420,7 +1420,6 @@ msgid "pre-depends on"
 msgstr "требует предварительной установки"
 
 #: dselect/pkgdisplay.cc:77
-#, fuzzy
 msgid "breaks"
 msgstr "ломает"
 
