--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 288t.
+
 2008-04-25  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Reword translation of "purge" for consistency.
