--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 984t.
+
 2008-05-02  SZERVÁC Attila <sas@321.hu>
 
         * hu.po: Updated to 818t.
