Update Slovak dpkg and dselect translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo).
   * Russian (Yuri Kozlov). Closes: #478827
+  * Slovak (Ivan Masár). Closes: #478897
   * Swedish (Peter Karlsson).
 
   [ Updated manpages translations ]
@@ -56,6 +57,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * German (Sven Joachim).
   * Russian (Yuri Kozlov). Closes: #478802
+  * Slovak (Ivan Masár). Closes: #479007
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Fri, 11 Apr 2008 22:46:48 +0100
 
