--- a/dselect/po/sk.po
+++ b/dselect/po/sk.po
@@ -1,15 +1,18 @@
 # dpkg - Slovak translation
+# Copyright (C) 2005, 2006, 2008 Software in the Public Interest, Inc.
+# This file is distributed under the same license as the dselect package.
 #
 # Roman Benko <benco@acid.sk>, 2005 - master translator
 # Peter Mann <Peter.Mann@tuke.sk>, 2006 - only new changes
+# Ivan Masár <helix84@centrum.sk>, 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2006-10-05 20:44+0200\n"
-"Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
+"PO-Revision-Date: 2008-05-02 09:39+0100\n"
+"Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -141,9 +144,8 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:260
-#, fuzzy
 msgid "Keybindings"
-msgstr "funkcie klávesov"
+msgstr "Väzby klávesov"
 
 #: dselect/baselist.cc:308
 #, c-format
@@ -171,11 +173,11 @@ msgstr "[unk: %d]"
 
 #: dselect/bindings.cc:129
 msgid "Scroll onwards through help/information"
-msgstr "Posun nápovedou/informáciami smerom dopredu"
+msgstr "Posun pomocníka/informáciami smerom dopredu"
 
 #: dselect/bindings.cc:130
 msgid "Scroll backwards through help/information"
-msgstr "Posun nápovedou/informáciami smerom dozadu"
+msgstr "Posun pomocníka/informáciami smerom dozadu"
 
 #: dselect/bindings.cc:131
 msgid "Move up"
@@ -187,15 +189,15 @@ msgstr "Posun dolu"
 
 #: dselect/bindings.cc:133
 msgid "Go to top of list"
-msgstr "Choď na začiatok zoznamu"
+msgstr "Prejsť na začiatok zoznamu"
 
 #: dselect/bindings.cc:134
 msgid "Go to end of list"
-msgstr "Choď na koniec zoznamu"
+msgstr "Prejsť na koniec zoznamu"
 
 #: dselect/bindings.cc:135
 msgid "Request help (cycle through help screens)"
-msgstr "Vyžiadaj nápovedu (pohyb naprieč oknami nápovedy)"
+msgstr "Vyžiadať pomoc (pohyb naprieč oknami Pomocníka)"
 
 #: dselect/bindings.cc:136
 msgid "Cycle through information displays"
@@ -203,7 +205,7 @@ msgstr "Pohyb naprieč informačnými obrazovkami"
 
 #: dselect/bindings.cc:137
 msgid "Redraw display"
-msgstr "Prekresli obrazovku"
+msgstr "Prekresliť obrazovku"
 
 #: dselect/bindings.cc:138
 msgid "Scroll onwards through list by 1 line"
@@ -231,31 +233,31 @@ msgstr "Posun zoznamom dozadu"
 
 #: dselect/bindings.cc:146
 msgid "Mark package(s) for installation"
-msgstr "Označ balík(y) na inštaláciu"
+msgstr "Označiť balík(y) na inštaláciu"
 
 #: dselect/bindings.cc:147
 msgid "Mark package(s) for deinstallation"
-msgstr "Označ balík(y) pre deinštaláciu"
+msgstr "Označiť balík(y) na odinštalovanie"
 
 #: dselect/bindings.cc:148
 msgid "Mark package(s) for deinstall and purge"
-msgstr "Označ balík(y) pre deinštaláciu a vyčistenie"
+msgstr "Označiť balík(y) na odinštalovanie a vyčistenie"
 
 #: dselect/bindings.cc:149
 msgid "Make highlight more specific"
-msgstr "Zvýš zvýraznenie"
+msgstr "Upresniť zvýraznenie"
 
 #: dselect/bindings.cc:150
 msgid "Make highlight less specific"
-msgstr "Zjemni zvýraznenie"
+msgstr "Rozšíriť zvýraznenie"
 
 #: dselect/bindings.cc:151
 msgid "Search for a package whose name contains a string"
-msgstr "Hľadaj balík, ktorého názov obsahuje reťazec"
+msgstr "Hľadať balík, ktorého názov obsahuje reťazec"
 
 #: dselect/bindings.cc:152
 msgid "Repeat last search."
-msgstr "Zopakuj posledné hľadanie."
+msgstr "Zopakovať posledné hľadanie."
 
 #: dselect/bindings.cc:153
 msgid "Swap sort order priority/section"
@@ -290,9 +292,8 @@ msgid "Revert to directly requested state for all packages"
 msgstr "Návrat do priamo požadovaného stavu pre všetky balíky"
 
 #: dselect/bindings.cc:161
-#, fuzzy
 msgid "Revert to currently installed state for all packages"
-msgstr "Návrat do priamo požadovaného stavu pre všetky balíky"
+msgstr "Návrat do momentálne nainštalovaného stavu pre všetky balíky"
 
 #: dselect/bindings.cc:164
 msgid "Select currently-highlighted access method"
@@ -307,7 +308,6 @@ msgid "Keystrokes"
 msgstr "Funkcie klávesov"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -338,40 +338,39 @@ msgid ""
 "cancel)\n"
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
-"Tlačidlá pohybu: Ďalší/Predošlý, Začiatok/Koniec, Hore/Dolu, Naspäť/"
+"Klávesy pre pohyb: Ďalší/Predošlý, Začiatok/Koniec, Hore/Dolu, Naspäť/"
 "Dopredu:\n"
-"  Šípka-dole, j             Šípka-hore, k           posuň zvýraznenie\n"
-"  N, Page-down, Space       P, Page-up, Backspace   posun v zozname o 1 "
+"  j, Šípka-dole             k, Šípka-hore           posunúť zvýraznenie\n"
+"  N, Page-down, medzerník   P, Page-up, Backspace   posun v zozname o 1 "
 "stranu\n"
 "  ^n                        ^p                      posun v zozname o 1 "
 "riadok\n"
-"  t, Home                   e, End                  skoč na začiatok/koniec "
+"  t, Home                   e, End                  skok na začiatok/koniec "
 "zoznamu\n"
-"  u                         d                       posuň info o 1 stranu\n"
-"  ^u                        ^d                      posuň info by 1 line\n"
-"  B, Šípka-vľavo            F, Šípka-vpravo         posuň displej o 1/3 "
-"obrazovky\n"
-"  ^b                        ^f                      posuň displej o 1 znak\n"
+"  u                         d                       posun info o 1 stranu\n"
+"  ^u                        ^d                      posun info by 1 line\n"
+"  B, Šípka-vľavo            F, Šípka-vpravo         posun o 1/3 obrazovky\n"
+"  ^b                        ^f                      posun o 1 znak\n"
 "\n"
-"Označte balíky pre neskoršie spracovanie:\n"
-" +, Insert  nainštaluj alebo aktualizuj      =, H  udrž v súčasnom stave\n"
-" -, Delete  odstrániť                  :, G  uvoľni: aktualizuj alebo "
-"ponechaj odinštalovaný\n"
-" _          odstráň a vyčisti konfiguráciu\n"
+"Označiť balíky pre neskoršie spracovanie:\n"
+" +, Insert  nainštalovať alebo aktualizovať  =, H  podržať v súčasnom stave\n"
+" -, Delete  odstrániť                  :, G  uvoľniť: aktualizovať alebo "
+"ponechať odinštalovaný\n"
+" _          odstrániť a vyčistiť konfiguráciu\n"
 "                                             Rozličné:\n"
-"Koniec, výstup, prepis (všimni si veľké písmená!):      ?, F1 vyžiadaj "
-"nápovedu (tiež Nápoveda)\n"
-" Návrat, Potvrdenie, koniec (skontroluj závislosti)     i, I  zmeň/cykluj "
-"info obrazovky\n"
-"   Q     Potvrď, koniec (potlač dep.s)                o, O  cykluj cez "
+"Koniec, výstup, prepis (všimnite si veľké písmená!):    ?, F1 vyžiadať "
+"pomocníka (tiež Pomocník)\n"
+" Návrat, Potvrdenie, koniec (skontrolovať závislosti)     i, I  zmeniť/"
+"cyklovať info obrazovky\n"
+"   Q     Potvrď, koniec (potlačiť závis.)             o, O  cyklovať cez "
 "zoraďovacie voľby\n"
-" X, Esc  skonči, zabudni všetky vykonané zmeny          v, V  zmeň stav "
+" X, Esc  skončiť, zabudnúť všetky vykonané zmeny        v, V  zmeň stav "
 "volieb obrazovky\n"
-"   R     Vráť do stavu pred týmto zoznamom              ^l    prekresli "
+"   R     Vrátiť do stavu pred týmto zoznamom            ^l    prekresli "
 "displej\n"
-"   U     nastav všetko na doporučený stav               /     hľadaj "
-"(stlačením Return zruš)\n"
-"   D     nastav všetko na priamo požadovaný stav        n, \\ opakuj "
+"   U     nastaviť všetko na odporúčaný stav              /     hľadať "
+"(stlačením Return zrušiť)\n"
+"   D     nastaviť všetko na priamo požadovaný stav      n, \\ opakovať "
 "posledné vyhľadávanie\n"
 
 #: dselect/helpmsgs.cc:51
@@ -466,20 +465,21 @@ msgstr ""
 "\n"
 "Budete oboznámení so zoznamom balíkov, ktoré sú nainštalované, alebo sú "
 "dostupné\n"
-"na inštaláciu. Kedže nemáte privilégiá potrebné na aktualizáciu\n"
-"stavu balíkov, ste v móde len pre čítanie. V zozname sa môžete pohybovať\n"
-"pomocou kurzorových klávesov (pozrite si nápovedu `Funkcie klávesov'), "
-"sledovať\n"
-"stav balíkov a prečítať si informácie o nich.\n"
+"na inštaláciu. Kedže nemáte oprávnenie potrebné na aktualizáciu\n"
+"stavu balíkov, ste v režime len pre čítanie. V zozname sa môžete pohybovať\n"
+"pomocou kurzorových klávesov (pozrite si tému pomocníka `Funkcie "
+"klávesov'),\n"
+"sledovať stav balíkov a prečítať si informácie o nich.\n"
 "\n"
 "Mali by ste si prečítať zoznam klávesov a vysvetlivky k obsahu obrazovky.\n"
-"Je dostupných množstvo on-line nápovied, prosíme Vás, aby ste ich používali "
+"Je dostupných množstvo online pomocníkov, prosíme vás, aby ste ich používali "
 "- stlačte `?'\n"
-"kedykoľvek a získate nápovedu.\n"
+"kedykoľvek a získate pomoc.\n"
 "\n"
 "Keď skončíte prezeranie, stlačte `Q' alebo <enter> pre ukončenie.\n"
 "\n"
-"Stlačte <medzerník> pre ukončenie nápovedy a vstúpte do zoznamu.\n"
+"Pomocníka ukončíte  a späť na zoznam sa vrátite stlačením klávesu "
+"<medzerník>.\n"
 
 #: dselect/helpmsgs.cc:95
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -556,7 +556,6 @@ msgid "Display, part 1: package listing and status chars"
 msgstr "Zobrazenie, čast 1: zoznam balíkov a znaky stavov"
 
 #: dselect/helpmsgs.cc:121
-#, fuzzy
 msgid ""
 "The top half of the screen shows a list of packages.  For each package you "
 "see\n"
@@ -589,8 +588,8 @@ msgid ""
 "description.\n"
 msgstr ""
 "Horná polovica obrazovky ukazuje zoznam balíkov. Pre každý balík vidíte\n"
-"štyri stĺpce o jeho aktuálnom stave v systéme a označenie.  V obsiahlom móde "
-"(použite\n"
+"štyri stĺpce o jeho aktuálnom stave v systéme a označenie.  V stručnom "
+"režime (použite\n"
 "`v' na zapnutie obsiahleho zobrazenia) sú tu jednoduché znaky, zľava do "
 "prava:\n"
 "\n"
@@ -725,7 +724,6 @@ msgid "Keystrokes for method selection"
 msgstr "Keystrokes for method selection"
 
 #: dselect/helpmsgs.cc:192
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -751,26 +749,26 @@ msgid ""
 msgstr ""
 "Klávesy pre pohyb: Ďalší/Predchádzajúci, Začiatok/Koniec, Hore/Dole, Dozadu/"
 "Dopredu:\n"
-"  n, Šípka-dole         p, Šípka-hore           presunutie zvýraznenia\n"
+"  j, Šípka-dole         k, Šípka-hore           presunutie zvýraznenia\n"
 "  N, Page-down, Space   P, Page-up, Backspace   posun zoznamu o 1 stranu\n"
 "  ^n                    ^p                      posun zoznamu o 1 riadok\n"
 "  t, Home               e, End                  skok na začiatok/koniec "
 "zoznamu\n"
 "  u                     d                       posun informácii o 1 stranu\n"
-"  ^u                    ^d                      pusun informácii o 1 riadok\n"
+"  ^u                    ^d                      posun informácii o 1 riadok\n"
 "  B, Šípka-vľavo         F, Šípka-vpravo        posun displeja o 1/3 "
 "obrazovky\n"
 "  ^b                    ^f                      posun displeja o 1 znak\n"
-"(Toto su tie isté klávesy pre pohyb ako na obrazovke so zoznamom balíkov.)\n"
+"(Toto sú rovnaké klávesy pre pohyb ako na obrazovke so zoznamom balíkov.)\n"
 "\n"
 "Koniec:\n"
 " Return, Enter    vyber túto metódu a choď do jej konfiguračného dialógu\n"
-" x, X             skonči bez zmien alebo nastavení inštalačnej metódy\n"
+" x, X             skončiť bez zmien alebo nastavení inštalačnej metódy\n"
 "\n"
 "Rôzne:\n"
 "  ?, Help, F1      vyžiada nápovedu\n"
 " ^l                prekreslí obrazovku\n"
-"  /                vyhľadanie (stlačením Return akciu zrušíte)\n"
+"  /                vyhľadanie (stlačením Return zrušíte operáciu)\n"
 "  \\               zopakuje posledné hľadanie\n"
 
 #: dselect/main.cc:52
@@ -819,11 +817,11 @@ msgstr "n"
 
 #: dselect/main.cc:138
 msgid "[I]nstall"
-msgstr "[N]ainštaluj"
+msgstr "[N]ainštalovať"
 
 #: dselect/main.cc:138
 msgid "Install and upgrade wanted packages."
-msgstr "Nainštaluj a aktualizuj požadované balíky."
+msgstr "Nainštalovať a aktualizovať požadované balíky."
 
 #: dselect/main.cc:139
 msgid "c"
@@ -831,11 +829,11 @@ msgstr "k"
 
 #: dselect/main.cc:139
 msgid "[C]onfig"
-msgstr "[K]onfiguruj"
+msgstr "[K]onfigurovať"
 
 #: dselect/main.cc:139
 msgid "Configure any packages that are unconfigured."
-msgstr "Konfiguruj všetky nenakonfigurované balíky."
+msgstr "Konfigurovať všetky nenakonfigurované balíky."
 
 #: dselect/main.cc:140
 msgid "r"
@@ -847,7 +845,7 @@ msgstr "[O]dstráň"
 
 #: dselect/main.cc:140
 msgid "Remove unwanted software."
-msgstr "Odstráň nežiadaný software."
+msgstr "Odstrániť nechcený softvér."
 
 #: dselect/main.cc:141
 msgid "q"
@@ -859,7 +857,7 @@ msgstr "[U]končiť"
 
 #: dselect/main.cc:141
 msgid "Quit dselect."
-msgstr "Ukonči dselect."
+msgstr "Ukončiť dselect."
 
 #: dselect/main.cc:142
 msgid "menu"
@@ -895,7 +893,7 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
-"Použitie: %s [<voľba> ...] [<akcia> ...]\n"
+"Použitie: %s [<voľba> ...] [<operácia> ...]\n"
 "\n"
 
 #: dselect/main.cc:176
@@ -926,7 +924,7 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
-"  --help                       Zobrazí túto nápovedu.\n"
+"  --help                       Zobrazí tento text Pomocníka.\n"
 "  --version                    Zobrazí číslo verzie.\n"
 "  --license | --licence        Zobrazí licenciu.\n"
 "\n"
@@ -938,7 +936,7 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
-"Akcie:\n"
+"Operácie:\n"
 "  access update select install config remove quit\n"
 "\n"
 
@@ -1076,9 +1074,8 @@ msgid "[none]"
 msgstr "[žiadny]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "vysvetlenie"
+msgstr "Vysvetlenie"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
@@ -1146,7 +1143,7 @@ msgstr "bol ukončený signálom: %s.\n"
 #: dselect/method.cc:195
 #, c-format
 msgid "(It left a coredump.)\n"
-msgstr "(Zostal coredump.)\n"
+msgstr "(It nechal coredump.)\n"
 
 #: dselect/method.cc:197
 #, c-format
@@ -1156,7 +1153,7 @@ msgstr "zlyhal s neznámym čakacím návratovým kódom %d.\n"
 #: dselect/method.cc:199
 #, c-format
 msgid "Press <enter> to continue.\n"
-msgstr "Pre pokračovanie stlačte <enter>.\n"
+msgstr "Pokračujte stlačením klávesu <enter>.\n"
 
 #: dselect/method.cc:201
 msgid "write error on standard error"
@@ -1230,7 +1227,7 @@ msgstr "EOF pred začiatkom názvu voľby"
 
 #: dselect/methparse.cc:155
 msgid "nonalpha where option name start wanted"
-msgstr "nealfanumerický znak tam, kde je očakávaný začiatok názvu voľby"
+msgstr "nealfanumerický znak tam, kde sa očakáva začiatok názvu voľby"
 
 #: dselect/methparse.cc:157
 msgid "non-alphanum in option name"
@@ -1356,15 +1353,15 @@ msgstr "zlyhala konfigurácia"
 
 #: dselect/pkgdisplay.cc:57
 msgid "awaiting trigger processing"
-msgstr ""
+msgstr "čaká sa na spracovanie spúšťačov (triggers-awaited)"
 
 #: dselect/pkgdisplay.cc:58
 msgid "triggered"
-msgstr ""
+msgstr "spustené"
 
 #: dselect/pkgdisplay.cc:59
 msgid "installed"
-msgstr "inštalovaný"
+msgstr "nainštalovaný"
 
 #: dselect/pkgdisplay.cc:62
 msgid "Required"
@@ -1420,7 +1417,7 @@ msgstr "pred-závisí na"
 
 #: dselect/pkgdisplay.cc:77
 msgid "breaks"
-msgstr ""
+msgstr "kazí"
 
 #: dselect/pkgdisplay.cc:78
 msgid "conflicts with"
@@ -1635,24 +1632,20 @@ msgstr ""
 "z iných skupín."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
-msgstr "závislosti"
+msgstr "Závislosti"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "popis nie je dostupný"
+msgstr "Popis nie je dostupný."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "nainštalované riadiace informácie pre "
+msgstr "Informácie nainštalovaného riadiaceho súboru"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "dostupná verzia informácií o riadiacom súbore"
+msgstr "Dostupné informácie o riadiacom súbore"
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
 msgid "<null>"
@@ -1726,7 +1719,7 @@ msgstr "Stará značka"
 
 #: dselect/pkgtop.cc:281
 msgid "Marked for"
-msgstr "Označené pre"
+msgstr "Označené na"
 
 #: dselect/pkgtop.cc:284
 msgid "EIOM"
