--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03  Ivan Masár  <helix84@centrum.sk>
+
+	* sk.po: Update to 981t3f.
+
 2008-05-03  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 984t.
