Update Russian dpkg-dev translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
   * Polish (Robert Luberda).
+  * Russian (Yuri Kozlov). Closes: #479142
   * Swedish (Peter Karlsson).
 
   [ Updated dselect translations ]
