French dseclect translation update

--- a/dselect/po/fr.po
+++ b/dselect/po/fr.po
@@ -57,13 +57,13 @@
 # abréviation postint...
 # to fsync (synchroniser?)
 #
-# Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007.
+# Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2007-05-21 07:39+0200\n"
+"PO-Revision-Date: 2008-05-03 18:52+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -345,9 +345,8 @@ msgid "Revert to directly requested state for all packages"
 msgstr "Retour à l'état directement demandé pour tous les paquets"
 
 #: dselect/bindings.cc:161
-#, fuzzy
 msgid "Revert to currently installed state for all packages"
-msgstr "Retour à l'état directement demandé pour tous les paquets"
+msgstr "Retour à l'état actuellement installé pour tous les paquets"
 
 #: dselect/bindings.cc:164
 msgid "Select currently-highlighted access method"
@@ -608,7 +607,6 @@ msgid "Display, part 1: package listing and status chars"
 msgstr "Affichage, 1re partie : liste des paquets et caractères d'état"
 
 #: dselect/helpmsgs.cc:121
-#, fuzzy
 msgid ""
 "The top half of the screen shows a list of packages.  For each package you "
 "see\n"
@@ -678,8 +676,7 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:148
 msgid "Display, part 2: list highlight; information display"
-msgstr ""
-"Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
+msgstr "Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
 
 #: dselect/helpmsgs.cc:148
 msgid ""
@@ -1245,8 +1242,7 @@ msgstr "script de requête/configuration"
 #: dselect/methparse.cc:53
 #, c-format
 msgid "syntax error in method options file `%.250s' -- %s"
-msgstr ""
-"erreur de syntaxe dans le fichier des options de méthode « %.250s » -- %s"
+msgstr "erreur de syntaxe dans le fichier des options de méthode « %.250s » -- %s"
 
 #: dselect/methparse.cc:58
 #, c-format
@@ -1275,8 +1271,7 @@ msgstr "impossible de lire le fichier des options de méthode « %.250s »"
 
 #: dselect/methparse.cc:140
 msgid "non-digit where digit wanted"
-msgstr ""
-"caractère non numérique rencontré alors qu'un caractère numérique est attendu"
+msgstr "caractère non numérique rencontré alors qu'un caractère numérique est attendu"
 
 #: dselect/methparse.cc:143
 msgid "EOF in index string"
@@ -1328,8 +1323,7 @@ msgstr "impossible d'ouvrir le fichier de description d'option « %.250s »"
 #: dselect/methparse.cc:187
 #, c-format
 msgid "unable to stat option description file `%.250s'"
-msgstr ""
-"impossible d'analyser le nouveau fichier de description d'option « %.250s »"
+msgstr "impossible d'analyser le nouveau fichier de description d'option « %.250s »"
 
 #: dselect/methparse.cc:191
 #, c-format
@@ -1429,11 +1423,11 @@ msgstr "échec de la configuration"
 
 #: dselect/pkgdisplay.cc:57
 msgid "awaiting trigger processing"
-msgstr ""
+msgstr "attente du traitement du déclencheur (« trigger »)"
 
 #: dselect/pkgdisplay.cc:58
 msgid "triggered"
-msgstr ""
+msgstr "déclenché"
 
 #: dselect/pkgdisplay.cc:59
 msgid "installed"
@@ -1492,9 +1486,8 @@ msgid "pre-depends on"
 msgstr "pré-dépend de"
 
 #: dselect/pkgdisplay.cc:77
-#, fuzzy
 msgid "breaks"
-msgstr "cassé avec"
+msgstr "casse"
 
 #: dselect/pkgdisplay.cc:78
 msgid "conflicts with"
@@ -1821,3 +1814,4 @@ msgstr "Vers. inst"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Vers. dispo."
+
