Again fix Eddy's comma

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -47,7 +47,7 @@
 	* pl.po: Recoded to UTF-8.
 	* pl.po: Updated to 286t.
 
-2008-02-09  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2008-02-09  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 285t.
 
