Update Czech translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #478827
   * Slovak (Ivan Masár). Closes: #478897
   * Swedish (Peter Karlsson).
+  * Czech (Miroslav Kure).
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
@@ -62,6 +63,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * German (Sven Joachim).
   * Russian (Yuri Kozlov). Closes: #478802
   * Slovak (Ivan Masár). Closes: #479007
+  * Czech (Miroslav Kure).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Fri, 11 Apr 2008 22:46:48 +0100
 
