--- a/dselect/po/cs.po
+++ b/dselect/po/cs.po
@@ -1,7 +1,7 @@
 # Czech translation for dpkg.
 #
 # Petr Cech <cech@debian.org>, 1999, 2000, 2001.
-# Miroslav Kure <kurem@debian.cz>, 2004, 2005, 2006, 2007.
+# Miroslav Kure <kurem@debian.cz>, 2004, 2005, 2006, 2007, 2008.
 #
 # Thanks go to:
 # Milan Zamazal <pdm@debian.org>
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2007-11-09 19:25+0100\n"
+"PO-Revision-Date: 2008-05-03 19:19+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -288,9 +288,8 @@ msgid "Revert to directly requested state for all packages"
 msgstr "Návrat do požadovaných stavů pro všechny balíky"
 
 #: dselect/bindings.cc:161
-#, fuzzy
 msgid "Revert to currently installed state for all packages"
-msgstr "Návrat do požadovaných stavů pro všechny balíky"
+msgstr "Návrat do aktuálního instalovaného stavu pro všechny balíky"
 
 #: dselect/bindings.cc:164
 msgid "Select currently-highlighted access method"
@@ -531,7 +530,6 @@ msgid "Display, part 1: package listing and status chars"
 msgstr "Zobrazení, část 1: seznam balíků a stavové znaky"
 
 #: dselect/helpmsgs.cc:121
-#, fuzzy
 msgid ""
 "The top half of the screen shows a list of packages.  For each package you "
 "see\n"
@@ -570,13 +568,13 @@ msgstr ""
 " Příznak chyby: mezera - bez chyby (ale může být v chybném stavu - viz "
 "níže);\n"
 "                 `R'   - vážná chyba při instalaci, vyžaduje reinstalaci;\n"
-" Stav instalace:  mezera - neinstalován;\n"
-"                    `*'  - instalován;\n"
-"                    `-'  - odinstalován, se zachovanými konfiguračními "
-"soubory;\n"
-"         balíky v { `U'  - rozbalen, ale ještě nezkonfigurován;\n"
-"   těchto stavech { `C'  - napůl zkonfigurován (nastala chyba);\n"
-"      jsou chybné { `I'  - napůl nainstalován (nastala chyba).\n"
+" Stav instalace:   mezera      - nenainstalován;\n"
+"                     `*'       - nainstalován;\n"
+"                     `-'       - odinstalován, konf. soubory zachovány;\n"
+"   balíky v těchto { `U'       - rozbalen, ale ještě nezkonfigurován;\n"
+"   stavech nejsou  { `C'       - napůl zkonfigurován (nastala chyba);\n"
+"   (zcela) správně { `I'       - napůl nainstalován (nastala chyba);\n"
+"   nainstalovány   { `W', 't'  - spouštěče jsou očekávány/nevyřízeny.\n"
 " Stará značka: co bylo žádáno pro tento balík před vstupem do tohoto "
 "seznamu;\n"
 " Značka: co je žádáno pro tento balík:\n"
@@ -1323,11 +1321,11 @@ msgstr "nezdařená konfigurace"
 
 #: dselect/pkgdisplay.cc:57
 msgid "awaiting trigger processing"
-msgstr ""
+msgstr "očekává zpracování spouštěčů"
 
 #: dselect/pkgdisplay.cc:58
 msgid "triggered"
-msgstr ""
+msgstr "spouštěč aktivován"
 
 #: dselect/pkgdisplay.cc:59
 msgid "installed"
@@ -1386,7 +1384,6 @@ msgid "pre-depends on"
 msgstr "před-závisí na"
 
 #: dselect/pkgdisplay.cc:77
-#, fuzzy
 msgid "breaks"
 msgstr "poruší"
 
