dpkg-shlibdeps: improve "library not found" error message
* scripts/dpkg-shlibdeps.pl: Include the format of the desired
library in the "library not found" error message.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-05  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl: Include the format of the desired
+	library in the "library not found" error message.
+
 2008-05-02  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl: Do not suggest manually changing
