--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 dpkg (1.15.0) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Do not suggest manually changing the alternative symlinks on
     update-alternative's verbose mode. Closes: #412487
+
+  [ Raphael Hertzog ]
+  * Enhance dpkg-shlibdeps's error message when a library can't be found to
+    include the ELF format of the desired library. Closes: #474671
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
