dpkg-gensymbols: fail when empty values are given to -v, -P or -e.
* scripts/dpkg-gensymbols.pl: Do not accept empty parameters for
-v, -P and -e. "-v" led to empty versions in symbols files and people used
that option by mistake believing it would enable a verbose mode.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-05  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-gensymbols.pl: Do not accept empty parameters for
+	-v,  -P and -e.
+
+2008-05-05  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/dpkg-shlibdeps.pl: Include the format of the desired
 	library in the "library not found" error message.
 
