--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
     include the ELF format of the desired library. Closes: #474671
+  * dpkg-gensymbols now refuses empty values for the the -v -P and -e
+    parameters.
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
