--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-05  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 467t0f2u. / a minor fix
+
 2008-05-03  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 468t1f.
