Updated Polish translations (from Wiktor Wandachowicz)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-05  Wiktor Wandachowicz <siryes@gmail.com>
+
+	* pl.po: Minor fixes.
+
 2008-05-04  Ivan Masár  <helix84@centrum.sk>
 
 	* sk.po: Update to 984t.
@@ -14,7 +18,7 @@
 
         * hu.po: Updated to 818t.
 
-2008-04-31  Wiktor Wandachowicz <siryes@gmail.com>
+2008-04-30  Wiktor Wandachowicz <siryes@gmail.com>
 
 	* pl.po: Updated to 984t.
 
