--- a/po/pl.po
+++ b/po/pl.po
@@ -1,18 +1,18 @@
-# dpkg.pl.po
-# Copyright (C) 1999 Free Software Foundation, Inc.
+# Polish translation of dpkg
+# Copyright (C) 1999 Software in the Public Interest, Inc.
 # Piotr Roszatycki <dexter@debian.org>, 1999.
 # Bartosz Feński <fenio@debian.org>, 2004-2005
-# Robert Luberda <robert@debian.org>, 2006 - 2008
+# Robert Luberda <robert@debian.org>, 2006-2008
 # Wiktor Wandachowicz <siryes@gmail.com>, 2008
 #
 # Nazewnictwo i spójność tłumaczeń programów apt, aptitude, synaptic i innych:
 # http://wiki.debian.org/PolishL10N/PackageInstallers
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.18\n"
+"Project-Id-Version: dpkg 1.14.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-29 06:58+0300\n"
-"PO-Revision-Date: 2008-04-30 04:37+0100\n"
+"PO-Revision-Date: 2008-05-01 14:33+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10-n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -409,7 +409,7 @@ msgstr "katalog główny lub pusty jest użyty jako \"conffile\""
 msgid ""
 "`%s' field, missing package name, or garbage where package name expected"
 msgstr ""
-"pole \"%s\", brak nazwy pakietu lub śmieci w miejscu gdzie spodziewano się "
+"pole \"%s\", brak nazwy pakietu lub śmieci w miejscu, gdzie spodziewano się "
 "nazwy pakietu"
 
 #: lib/fields.c:341
@@ -814,20 +814,20 @@ msgstr "Configured-Version dla pakietu z nieprawidłowym statusem"
 #: lib/parse.c:271
 #, c-format
 msgid "package has status %s but triggers are awaited"
-msgstr "pakiet ma status %s ale są oczekujące wyzwalacze"
+msgstr "pakiet ma status %s, ale są oczekujące wyzwalacze"
 
 #: lib/parse.c:275
 msgid "package has status triggers-awaited but no triggers awaited"
-msgstr "pakiet ma status triggers-awaited ale brak oczekujących wyzwalaczy"
+msgstr "pakiet ma status triggers-awaited, ale brak oczekujących wyzwalaczy"
 
 #: lib/parse.c:281
 #, c-format
 msgid "package has status %s but triggers are pending"
-msgstr "pakiet ma status %s ale są zaplanowane wyzwalacze"
+msgstr "pakiet ma status %s, ale są zaplanowane wyzwalacze"
 
 #: lib/parse.c:285
 msgid "package has status triggers-pending but no triggers pending"
-msgstr "pakiet ma status triggers-pending ale brak zaplanowanych wyzwalaczy"
+msgstr "pakiet ma status triggers-pending, ale brak zaplanowanych wyzwalaczy"
 
 #: lib/parse.c:295
 msgid "Package which in state not-installed has conffiles, forgetting them"
@@ -880,7 +880,7 @@ msgstr "musi się znaczynać od litery lub cyfry"
 #: lib/parsehelp.c:131
 #, c-format
 msgid "character `%c' not allowed (only letters, digits and characters `%s')"
-msgstr "znak \"%c\" jest niedozwolony (można użyć tylko liter, cyfr i \" %s\")"
+msgstr "znak \"%c\" jest niedozwolony (można użyć tylko liter, cyfr i \"%s\")"
 
 #: lib/parsehelp.c:186
 msgid "<none>"
@@ -1157,7 +1157,7 @@ msgstr "nie można odczytać potoku z \"dpkg-deb\""
 #: src/archives.c:266
 #, c-format
 msgid "error setting timestamps of `%.255s'"
-msgstr "nie można zaktualizować czasu dla \"%.255s\""
+msgstr "nie można zaktualizować czasu modyfikacji dla \"%.255s\""
 
 #: src/archives.c:273 src/archives.c:670
 #, c-format
@@ -1905,7 +1905,7 @@ msgstr "EOF na standardowym wejściu wprowadzony ze znaku zachęty"
 #: src/depcon.c:77
 #, c-format
 msgid "unable to check for existence of `%.250s'"
-msgstr "nie można sprawdzić czy istnieje \"%.250s\""
+msgstr "nie można sprawdzić, czy istnieje \"%.250s\""
 
 #: src/depcon.c:156
 #, c-format
@@ -2666,7 +2666,7 @@ msgstr ""
 "                          Ignorowanie zależności dotyczące <pakietu>.\n"
 "  --force-...             Pomijanie problemów - zobacz --force-help.\n"
 "  --no-force-...|--refuse-...\n"
-"                          Zatrzymanie jeśli wystąpią problemy.\n"
+"                          Zatrzymanie, jeśli wystąpią problemy.\n"
 "  --abort-after <n>       Zatrzymanie po wystąpieniu <n> błędów.\n"
 "\n"
 
@@ -4217,7 +4217,7 @@ msgid ""
 "Perhaps you should be using dpkg --install ?"
 msgstr ""
 "--%s wymaga podania katalogu docelowego.\n"
-"Być może należy użyć dpkg --install ?"
+"Być może należy użyć \"dpkg --install\"?"
 
 #: dpkg-deb/extract.c:341
 #, c-format
