--- a/debian/changelog
+++ b/debian/changelog
@@ -50,11 +50,12 @@ dpkg (1.14.19) UNRELEASED; urgency=low
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
+  * Polish (Wiktor Wandachowicz).
   * Swedish (Peter Karlsson).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
-  * Polish (Robert Luberda).
+  * Polish (Wiktor Wandachowicz).
   * Russian (Yuri Kozlov). Closes: #479142
   * Swedish (Peter Karlsson).
 
