--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-05  Wiktor Wandachowicz <siryes@gmail.com>
+
+	* pl.po: Updated to 1543t58u.
+
 2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1583t0f18u.
